# pedant_killer

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/matchers/: ruff.json
.github/workflows/: ruff_lint_and_format_checks.yaml
.github/workflows/matchers/: ruff.json
example/: containers.py  core_repository.py  database.py  device_repository.py  device_use_case.py  main.py  models.py  schemas.py
pedant_killer/: config.py  containers.py  main.py
pedant_killer/data/: 4395412263a1_insert_data.py  Untitled.ipynb  breaking.csv  breaking_service.csv  device_service.csv  device_service_old.csv
pedant_killer/database/: __init__.py  database.py  models.py  repository.py  schemas.py  service.py  specification.py
pedant_killer/database/migrations/: env.py
pedant_killer/database/models/: __init__.py  access_level_orm.py  annotated.py  breaking_orm.py  device_orm.py  device_service_orm.py  device_type_orm.py  manufacturer_device_type_orm.py  manufacturer_orm.py  order_device_service_orm.py  order_orm.py  order_status_orm.py  service_breaking_orm.py  service_orm.py  user_orm.py
pedant_killer/database/repository/: __init__.py  access_level_repository.py  breaking_repository.py  breaking_service_repository.py  (+11 more)
pedant_killer/filters/: filters_for_repair.py  repair.py
pedant_killer/gateway/: api_yandex_map.py
pedant_killer/handlers/: base_commands.py  common.py  repair_or_diagnostic.py
pedant_killer/schemas/: __init__.py  access_level_schema.py  breaking_schemas.py  common_schema.py  device_schema.py  device_service_schema.py  device_type_schema.py  manufacturer_device_type_schema.py  manufacturer_schema.py  order_device_service_schema.py  order_device_service_user_schema.py  order_schema.py  order_status_schema.py  order_user_schema.py  service_breaking_schema.py  service_schema.py  user_access_level_schema.py  user_schema.py  yandex_map_schema.py
pedant_killer/services/: __init__.py  access_level_service.py  breaking_service.py  breaking_service_service.py  core_service.py  device_service.py  device_service_service.py  device_type_service.py  manufacturer_device_type_service.py  manufacturer_service.py  order_device_service_service.py  order_service.py  order_status_service.py  service.py  service_service.py  test_service.py  user_service.py  yandex_map_service.py
pedant_killer/telegram_bot/: bot_init.py  main_bot.py
pedant_killer/кeyboards/: device_models.py  question.py
tests/: conftest.py
tests/tests_service/: test_access_level_service.py  test_device_service.py  test_device_service_service.py  test_device_type_service.py  test_manufacturer_device_type_service.py  test_manufacturer_service.py  test_order_service.py  test_order_status_service.py  test_service_service.py
(+73 files in other folders)
